RESOLVED FIXED293819
[Win] Fix GraphicsLayerWC usage of TransformState
https://bugs.webkit.org/show_bug.cgi?id=293819
Summary [Win] Fix GraphicsLayerWC usage of TransformState
Ian Grunert
Reported 2025-05-30 12:04:33 PDT
Fix for broken Windows build by https://commits.webkit.org/295560@main
Attachments
EWS
Comment 1 2025-05-30 12:22:43 PDT
Committed 295621@main (6a41407075f2): <https://commits.webkit.org/295621@main> Reviewed commits have been landed. Closing PR #46134 and removing active labels.
Radar WebKit Bug Importer
Comment 2 2025-05-30 12:23:13 PDT
Note You need to log in before you can comment on or make changes to this bug.