[Win] Fix GraphicsLayerWC usage of TransformState https://bugs.webkit.org/show_bug.cgi?id=293819

Reviewed by Simon Fraser.

Fix for broken Windows build by https://commits.webkit.org/295560@main
Switch usages of deleted methods and copy approach from GraphicsLayerCA

Canonical link: https://commits.webkit.org/295621@main